--- a/maket.html
+++ b/maket.html
@@ -23,7 +23,7 @@
         <nav>
             <div class="navbar">
                 <div class="container nav-container">
-                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <input class="checkbox" type="checkbox">
                     <div class="hamburger-lines">
                         <span class="line line1"></span>
                         <span class="line line2"></span>
@@ -38,21 +38,21 @@
                     </div>
                 </div>
             </div>
-
+        </nav>
         <div class="presentation">
             <div id="name">Denis Novik</div>
             <div id="designer"> UX | UI designer 24 years old, Minsk</div>
             <div id="lang">RU | ENG</div>
         </div>
         <div class="picture">
-             <img id="photo"  src="BSPP2266.png">
-             <img id="mobilephoto" src="full photo.png">
+            <img id="photo" src="BSPP2266.png">
+            <img id="mobilephoto" src="full photo.png">
         </div>
     </div>
     <div class="textcontainer">
         <a name="aboutme"></a>
         <div id="about">About me </div>
-        
+
         <div class="text">
             <p>Hi, I'm Denis – UX/UI designer from Minsk.
                 I'm interested in design and everything connected with it.</p>
@@ -67,70 +67,70 @@
     <div class="skills">
         <a name="skills"></a>
         <div id="skills">Skills</div>
-        
+
         <div class="skillstext">I work in such programs as</div>
         <div id="logos">
             <div class="logos">
-              <div class="photoshop">
-                <div class="photoshop" id="photoshopImg"><img src="photoshop.svg"></div>
-                <div class="photoshop" id="name1">Adobe Photoshop</div>
                 <div class="photoshop">
-                  <div class="stars">
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="greyStar.svg"></div>
-                  </div>
+                    <div class="photoshop" id="photoshopImg"><img src="photoshop.svg"></div>
+                    <div class="photoshop" id="name1">Adobe Photoshop</div>
+                    <div class="photoshop">
+                        <div class="stars">
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="greyStar.svg"></div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="logos">
-              <div class="illustrator">
-                <div class="illustrator" id="illustratorImg"><img src="Illustrator.svg"></div>
-                <div class="illustrator" id="name2">Adobe Illustrator</div>
                 <div class="illustrator">
-                  <div class="stars">
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="greyStar.svg"></div>
-                    <div class="star"><img src="greyStar.svg"></div>
-                  </div>
+                    <div class="illustrator" id="illustratorImg"><img src="Illustrator.svg"></div>
+                    <div class="illustrator" id="name2">Adobe Illustrator</div>
+                    <div class="illustrator">
+                        <div class="stars">
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="greyStar.svg"></div>
+                            <div class="star"><img src="greyStar.svg"></div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="logos">
-              <div class="aftereffects">
-                <div class="aftereffects" id="afreteffectsImg"><img src="AdobeAfterEffectslogo.svg"></div>
-                <div class="aftereffects" id="name3">Adobe After Effects</div>
                 <div class="aftereffects">
-                  <div class="stars">
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="greyStar.svg"></div>
-                  </div>
+                    <div class="aftereffects" id="afreteffectsImg"><img src="AdobeAfterEffectslogo.svg"></div>
+                    <div class="aftereffects" id="name3">Adobe After Effects</div>
+                    <div class="aftereffects">
+                        <div class="stars">
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="greyStar.svg"></div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="logos">
-              <div class="figma">
-                <div class="figma" id="figmaImg"><img src="Figmalogo.svg"></div>
-                <div id="name4">Figma</div>
                 <div class="figma">
-                  <div class="stars">
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="blackStar.svg"></div>
-                    <div class="star"><img src="greyStar.svg"></div>
-                  </div>
+                    <div class="figma" id="figmaImg"><img src="Figmalogo.svg"></div>
+                    <div id="name4">Figma</div>
+                    <div class="figma">
+                        <div class="stars">
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="blackStar.svg"></div>
+                            <div class="star"><img src="greyStar.svg"></div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
     </div>
     <div class="portfolio">
         <a name="portfolio"></a>
@@ -157,4 +157,5 @@
         <div id="like">Like me on <br> LinkedIn, Instagram, Behance, Dribble</div>
     </div>
 </body>
+
 </html>
