header style changes

--- a/maket2.html
+++ b/maket2.html
@@ -7,6 +7,17 @@
     <title>MAKET 2</title>
 </head>
 <body>
+
+    <div class="header">
+        <div class="logo"><img src="img/logo 1.svg"></div>
+        <div class="menu">
+            <div>Главная</div>
+            <div>О центре</div>
+            <div>Новости</div>
+            <div>Все курсы</div>
+            <div>Контакты</div>
+        </div>
+    </div>
     
 </body>
 </html>
