--- a/maket2.html
+++ b/maket2.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAKET 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="header">
-        <div class="logo"><img src="img/logo 1.svg"></div>
+        <div class="logo">
+            <img src="img/logo 1.svg">
+        </div>
         <div class="menu">
-            <div>Главная</div>
-            <div>О центре</div>
-            <div>Новости</div>
-            <div>Все курсы</div>
-            <div>Контакты</div>
+            <div class="menu">Главная</div>
+            <div class="menu">О центре</div>
+            <div class="menu">Новости</div>
+            <div class="menu">Все курсы</div>
+            <div class="menu">Контакты</div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
