--- a/maket2.html
+++ b/maket2.html
@@ -24,6 +24,47 @@
         </div>
     </div>
 
+    <div class="presentation">
+        <div class="description">
+            <div>
+            <h1>Профессиональный курс по <br> веб и мобильному дизайну</h1>
+            </div>
+            <div>
+                <p>3 месяца (25 занятий по 3 часа среда/суббота)</p>
+                <p>Помощь в трудоустройстве/стажировка</p>
+                <p>Онлайн и оффлайн группы</p>
+            </div>
+            <div class="buttons">
+                <button class="button1">Получить консультацию</button>
+                <button class="button2">Программа курса</button>
+            </div>
+        </div>
+        <div class="girlimg">
+            <img src="img/main page girl laptop.png">
+        </div>
+    </div>
+
+    <div id="forwho"><h2>Для кого подойдет этот курс</h2></div>
+    <div class="for">
+    <div id="for1">
+        <p>Для тех , кто не имеет<br>практического опыта</p>
+        <li>Прокачаете свои навыки</li>
+        <li>Поработаете в команде</li>
+    </div>
+    <div id="for2">
+        <p>Для начинающих<br>дизайнеров</p>
+        <li>Соберете портфолио</li>
+        <li>Прокачаетесь в инструментах дизайна</li>
+        <li>Освоите Figma</li>
+    </div>
+    <div id="for3">
+        <p>Для графических<br>дизайнеров</p>
+        <li>Структурируете свои знания</li>
+        <li>Прокачаете свои навыки</li>
+        <li>Поработаете в команде</li>
+    </div>
+    </div>
+
 </body>
 
 </html>
