--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pero Travel</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+    <header>
+        <img src="Images/images/Main page_header.png">
+    </header>
     
 </body>
 </html>
