footer style changes

--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -9,8 +9,46 @@
 </head>
 <body>
     <header>
-        <img src="Images/images/Main page_header.png">
+        <img class="header" src="Images/images/Main page_header.png">
     </header>
+
+    <footer class="footer">
+        <img class="logoColor" src="Images/svg/logo_color.svg">
+        <div class="footerMenu">
+            <p>Главная</p>
+            <p>Экскурсии</p>
+            <p>Личный кабинет</p>
+        </div>
+        <div class="footerContacts">
+            <div>
+                <img src="Images/svg/whatsapp_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/tg_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/tg_logo.svg">
+            </div>
+            <div>+7 964 944 18 74</div>
+            <div>+7 918 919 98 28</div>
+            <div>Телеграм-бот PeroTravel</div>
+        </div>
+        <div>
+            <div>
+                <img src="Images/svg/mail_logo.svg">
+            </div>
+            <div>office@perotravel.ru</div>
+            <div>
+                <img src="Images/svg/vk _color_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/inst_color_logo.svg">
+            </div>
+            <div>
+                <img src="Images/svg/fb_color_logo.svg">
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
