footer style changes

--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,13 @@
     <title>Pero Travel</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
     <header>
         <img class="header" src="Images/images/Main page_header.png">
     </header>
 
-    <footer class="footer">
+    <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
         <div class="footerMenu">
             <p>Главная</p>
@@ -20,35 +22,32 @@
             <p>Личный кабинет</p>
         </div>
         <div class="footerContacts">
-            <div>
+            <div class="whatsapp">
                 <img src="Images/svg/whatsapp_logo.svg">
+                <p>+7 964 944 18 74</p>
             </div>
-            <div>
+            <div class="tg">
                 <img src="Images/svg/tg_logo.svg">
+                <p>+7 918 919 98 28</p>
             </div>
-            <div>
+            <div class="tgBot">
                 <img src="Images/svg/tg_logo.svg">
+                <p>Телеграм-бот PeroTravel</p>
             </div>
-            <div>+7 964 944 18 74</div>
-            <div>+7 918 919 98 28</div>
-            <div>Телеграм-бот PeroTravel</div>
         </div>
         <div>
-            <div>
+            <div class="footerMail">
                 <img src="Images/svg/mail_logo.svg">
+                <p>office@perotravel.ru</p>
             </div>
-            <div>office@perotravel.ru</div>
-            <div>
+            <div class="footerSM">
                 <img src="Images/svg/vk _color_logo.svg">
-            </div>
-            <div>
                 <img src="Images/svg/inst_color_logo.svg">
-            </div>
-            <div>
                 <img src="Images/svg/fb_color_logo.svg">
             </div>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
