--- a/maket2.html
+++ b/maket2.html
@@ -27,7 +27,7 @@
     <div class="presentation">
         <div class="description">
             <div>
-            <h1>Профессиональный курс по <br> веб и мобильному дизайну</h1>
+                <h1>Профессиональный курс по <br> веб и мобильному дизайну</h1>
             </div>
             <div>
                 <p>3 месяца (25 занятий по 3 часа среда/суббота)</p>
@@ -44,26 +44,73 @@
         </div>
     </div>
 
-    <div id="forwho"><h2>Для кого подойдет этот курс</h2></div>
+    <div id="forwho">
+        <h2>Для кого подойдет этот курс</h2>
+    </div>
     <div class="for">
-    <div id="for1">
-        <p>Для тех , кто не имеет<br>практического опыта</p>
-        <li>Прокачаете свои навыки</li>
-        <li>Поработаете в команде</li>
+        <div id="for1">
+            <p>Для тех , кто не имеет<br>практического опыта</p>
+            <li>Прокачаете свои навыки</li>
+            <li>Поработаете в команде</li>
+        </div>
+        <div id="for2">
+            <p>Для начинающих<br>дизайнеров</p>
+            <li>Соберете портфолио</li>
+            <li>Прокачаетесь в инструментах дизайна</li>
+            <li>Освоите Figma</li>
+        </div>
+        <div id="for3">
+            <p>Для графических<br>дизайнеров</p>
+            <li>Структурируете свои знания</li>
+            <li>Прокачаете свои навыки</li>
+            <li>Поработаете в команде</li>
+        </div>
     </div>
-    <div id="for2">
-        <p>Для начинающих<br>дизайнеров</p>
-        <li>Соберете портфолио</li>
-        <li>Прокачаетесь в инструментах дизайна</li>
-        <li>Освоите Figma</li>
+
+
+
+    <div id="about">
+        <h2>О курсе</h2>
     </div>
-    <div id="for3">
-        <p>Для графических<br>дизайнеров</p>
-        <li>Структурируете свои знания</li>
-        <li>Прокачаете свои навыки</li>
-        <li>Поработаете в команде</li>
+    <div id="mainAbout">
+        <div id="aboutDescription">
+            <div class="aboutUs">
+                <div id="number">4</div>
+                <p>филиала в Беларуси</p>
+            </div>
+            <div class="aboutUs">
+                <div id="number">10</div>
+                <p>преподавателей</p>
+            </div>
+            <div class="aboutUs">
+                <div id="number">6</div>
+                <p>лет опыта работы</p>
+            </div>
+        </div>
+        <div>
+            <img src="img/video_img.png">
+        </div>
     </div>
+
+    <div id="mainClasses">
+        <div id="aboutClasses">
+        <div id="classes">
+            <h2>Как проходят занятия?</h2>
+        </div>
+        <div class="classesDescription">
+            <p>
+                Занятия проходят в среду 19:00-21:50 и субботу 10:00-12:50 по адресу проспект Речицкий, 80
+            </p>
+            <p>
+                Очный формат для слушателей из Гомеля + параллельный стрим + записи занятий для всех участников группы
+            </p>
+        </div>
+        </div>
+        <div>
+            <img src="img/classes.png">
+        </div>
     </div>
+
 
 </body>
 
