--- a/maket2.html
+++ b/maket2.html
@@ -111,6 +111,27 @@
         </div>
     </div>
 
+    <div>Работы выпускников</div>
+
+    <div>
+        <img src="img/work1.png">
+    </div>
+    <div>
+        <img src = "img/work2.png">
+    </div>
+    <div>
+        <img src="img/work3.png">
+    </div>
+    <div>
+        <img src="img/work4.png">
+    </div>
+    <div>
+        <img src="img/work5.png">
+    </div>
+    <div>
+        <img src="img/work6.png">
+    </div>
+
 
 </body>
 
