--- a/maket2.html
+++ b/maket2.html
@@ -94,44 +94,62 @@
 
     <div id="mainClasses">
         <div id="aboutClasses">
-        <div id="classes">
-            <h2>Как проходят занятия?</h2>
-        </div>
-        <div class="classesDescription">
-            <p>
-                Занятия проходят в среду 19:00-21:50 и субботу 10:00-12:50 по адресу проспект Речицкий, 80
-            </p>
-            <p>
-                Очный формат для слушателей из Гомеля + параллельный стрим + записи занятий для всех участников группы
-            </p>
-        </div>
+            <div id="classes">
+                <h2>Как проходят занятия?</h2>
+            </div>
+            <div class="classesDescription">
+                <p>
+                    Занятия проходят в среду 19:00-21:50 и субботу 10:00-12:50 по адресу проспект Речицкий, 80
+                </p>
+                <p>
+                    Очный формат для слушателей из Гомеля + параллельный стрим + записи занятий для всех участников
+                    группы
+                </p>
+            </div>
         </div>
         <div>
             <img src="img/classes.png">
         </div>
     </div>
 
-    <div>Работы выпускников</div>
+    <div class="works">
+        <h2>Работы выпускников</h2>
+    </div>
+    <div id="works">
+        <div id="work1">
+            <img src="img/work1.png">
+        </div>
+        <div id="work2">
+            <img src="img/work2.png">
+        </div>
+        <div id="work3">
+            <img src="img/work3.png">
+        </div>
+        <div id="work4">
+            <img src="img/work4.png">
+        </div>
+        <div id="work5">
+            <img src="img/work5.png">
+        </div>
+        <div id="work6">
+            <img src="img/work6.png">
+        </div>
+    </div>
 
-    <div>
-        <img src="img/work1.png">
+    <div class="button3">
+        <button id="button3">Получить консультацию</button>
     </div>
     <div>
-        <img src = "img/work2.png">
+        <h2>Преподаватели</h2>
     </div>
-    <div>
-        <img src="img/work3.png">
+    <div class="teachers">
+        <div id="teacher1"></div>
+        <div id="teacher3"></div>
+        <div id="teacher4"></div>
+        <div id="teacher5"></div>
+        <div id="teacher6"></div>
+        <div id="teacher7"></div>
     </div>
-    <div>
-        <img src="img/work4.png">
-    </div>
-    <div>
-        <img src="img/work5.png">
-    </div>
-    <div>
-        <img src="img/work6.png">
-    </div>
-
 
 </body>
 
