--- a/maket2.html
+++ b/maket2.html
@@ -143,12 +143,43 @@
         <h2>Преподаватели</h2>
     </div>
     <div class="teachers">
-        <div id="teacher1"></div>
-        <div id="teacher3"></div>
-        <div id="teacher4"></div>
-        <div id="teacher5"></div>
-        <div id="teacher6"></div>
-        <div id="teacher7"></div>
+        <div class="teacher1">
+            <div id="teacher1">
+                <img src="img/dmitri.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Дмитрий Аверченко</h3>
+                <p>Опыт работы с 2018 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: Продуктовый дизайн. Проектирование сложных интерфейсов. Пользовательские
+                    исследования и аналитика</p>
+            </div>
+        </div>
+        <div class="teacher2">
+            <div id="teacher2">
+                <img src="img/maxim.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Максим Осичка</h3>
+                <p>Опыт работы с 2011 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: Дизайн интерфейсов, юзабилити, иллюстрации, анимация, каллиграфия и леттеринг</p>
+            </div>
+        </div>
+        <div id="teacher3">
+            <img src="img/maximilian.png">
+        </div>
+        <div id="teacher4">
+            <img src="img/darya.png">
+        </div>
+        <div id="teacher5">
+            <img src="img/ludmila.png">
+        </div>
+        <div id="teacher6">
+            <img src="img/andrey.png">
+        </div>
     </div>
 
 </body>
