--- a/maket2.html
+++ b/maket2.html
@@ -142,12 +142,13 @@
     <div>
         <h2>Преподаватели</h2>
     </div>
-    <div class="teachers">
-        <div class="teacher1">
-            <div id="teacher1">
+
+    <div>
+        <div>
+            <div>
                 <img src="img/dmitri.png">
             </div>
-            <div class="teacherDescription">
+            <div>
                 <h3>Дмитрий Аверченко</h3>
                 <p>Опыт работы с 2018 года</p>
                 <p>Специальность:</p>
@@ -156,32 +157,46 @@
                     исследования и аналитика</p>
             </div>
         </div>
-        <div class="teacher2">
-            <div id="teacher2">
-                <img src="img/maxim.png">
-            </div>
-            <div class="teacherDescription">
-                <h3>Максим Осичка</h3>
-                <p>Опыт работы с 2011 года</p>
-                <p>Специальность:</p>
-                <p id="UI">UX/UI и веб-дизайн</p>
-                <p>Сфера интересов: Дизайн интерфейсов, юзабилити, иллюстрации, анимация, каллиграфия и леттеринг</p>
-            </div>
-        </div>
-        <div id="teacher3">
-            <img src="img/maximilian.png">
-        </div>
-        <div id="teacher4">
-            <img src="img/darya.png">
-        </div>
-        <div id="teacher5">
-            <img src="img/ludmila.png">
-        </div>
-        <div id="teacher6">
-            <img src="img/andrey.png">
+
+        <div>
+            <div></div>
+            <div></div>
         </div>
     </div>
 
+
+    <div>Программа трудоустройства</div>
+    <div class="programs">
+        <div id="program1">
+            <p>Оказываем помощь в составлении резюме</p>
+            <li>Узнаете, насколько привлекательно ваше резюме</li>
+            <li>Получите рекомендации по улучшению резюме</li>
+        </div>
+        <div id="program2">
+            <p>Помогаем составить профиль на LinkdIn</p>
+            <li>Получите инструкцию по заполнению профиля</li>
+            <li>Узнаете, как использовать данную сеть для поиска работы</li>
+        </div>
+        <div id="program3">
+            <p>Рекомендуем в компании</p>
+            <li>Будете рекомендованы на открытые позиции junior-специалистов</li>
+        </div>
+    </div>
+    <div class="programs">
+    <div id="program4">
+        <p>Готовим к собеседованию</p>
+        <li>Получите ответы на вопросы при поиске работы</li>
+        <li>Посетите тренинг “Эффективное трудоустройство”</li>
+    </div>
+    <div id="program5">
+        <p>Главное требование для участия в программе</p>
+        <li>Успешно пройти обучение по выбранной программе с оценкой не ниже 7 баллов</li>
+    </div>
+    <div id="program6">
+        <p>Возможность участия в IT Bootcamp</p>
+        <li>Сможете пройти весь цикл создания продукта и поработать в команде</li>
+    </div>
+    </div>
 </body>
 
 </html>
