--- a/maket2.html
+++ b/maket2.html
@@ -165,8 +165,10 @@
     </div>
 
 
-    <div>Программа трудоустройства</div>
-    
+    <div>
+        <h2>Программа трудоустройства</h2>
+    </div>
+
     <div class="programs">
         <div id="program1">
             <p>Оказываем помощь в составлении резюме</p>
@@ -198,6 +200,15 @@
         <li>Сможете пройти весь цикл создания продукта и поработать в команде</li>
     </div>
     </div>
+
+    <div>
+        <h2>Куда трудоустраиваем / с кем сотрудничаем</h2>
+    </div>
+
+    <div>
+        <img src="img/logos.png">
+    </div>
+
 </body>
 
 </html>
