--- a/тест.html
+++ b/тест.html
@@ -57,8 +57,8 @@
         }
 
         .teacherDescription p {
-            font-size: 18px;
-            line-height: 30px;
+            font-size: 15px;
+            line-height: 20px;
             color: #141323;
 
         }
@@ -71,10 +71,12 @@
             height: 100%;
         }
 
-        #more {
-            font-size: 24px;
-            color: #DA6B62;
+        
+
+        a,
+        a:visited {
             text-decoration: none;
+            color: #DA6B62;
         }
     </style>
 </head>
@@ -92,7 +94,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: Продуктовый дизайн. Проектирование сложных интерфейсов. Пользовательские
                     исследования и аналитика</p>
-                <div id="more"><a href="">Узнать больше</a></div>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
         <div id="teacher2">
@@ -106,6 +108,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: Дизайн интерфейсов, юзабилити, иллюстрации, анимация, каллиграфия и леттеринг
                 </p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
     </div>
@@ -121,6 +124,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: UI-дизайн (мобильный дизайн, веб-дизайн, дизайн десктоп-приложений),
                     UX-исследования, Front-end разработка</p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
         <div id="teacher4">
@@ -134,6 +138,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: UX/UI design, веб-дизайн, анимация, айдентика, продуктовый дизайн, полиграфия,
                     дизайн-системы, продуктовая анадитика</p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
     </div>
@@ -149,6 +154,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: UX дизайн, UI архитектура, графический дизайн, моушн дизайн, маркетинг, бизнес
                     аналитика</p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
         <div id="teacher6">
@@ -162,6 +168,7 @@
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: UX/UI дизайн, графический дизайн, проектирование пользовательских интерфейсов,
                     анимация</p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
     </div>
