--- a/maket2.html
+++ b/maket2.html
@@ -143,24 +143,94 @@
         <h2>Преподаватели</h2>
     </div>
 
-    <div>
-        <div>
+    <div class="flex-container">
+        <div id="teacher1">
             <div>
-                <img src="img/dmitri.png">
+                <img id="photo" src="img/dmitri.png">
             </div>
-            <div>
+            <div class="teacherDescription">
                 <h3>Дмитрий Аверченко</h3>
                 <p>Опыт работы с 2018 года</p>
                 <p>Специальность:</p>
                 <p id="UI">UX/UI и веб-дизайн</p>
                 <p>Сфера интересов: Продуктовый дизайн. Проектирование сложных интерфейсов. Пользовательские
                     исследования и аналитика</p>
+                <p id="more"><a href="">Узнать больше</a></p>
             </div>
         </div>
-
-        <div>
-            <div></div>
-            <div></div>
+        <div id="teacher2">
+            <div>
+                <img id="photo" src="img/maxim.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Максим Осичка</h3>
+                <p>Опыт работы с 2011 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: Дизайн интерфейсов, юзабилити, иллюстрации, анимация, каллиграфия и леттеринг
+                </p>
+                <p id="more"><a href="">Узнать больше</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div id="teacher3">
+            <div>
+                <img id="photo" src="img/maximilian.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Максимилиан Антипенко</h3>
+                <p>Опыт работы с 2013 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: UI-дизайн (мобильный дизайн, веб-дизайн, дизайн десктоп-приложений),
+                    UX-исследования, Front-end разработка</p>
+                <p id="more"><a href="">Узнать больше</a></p>
+            </div>
+        </div>
+        <div id="teacher4">
+            <div>
+                <img id="photo" src="img/darya.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Дарья Тумаш</h3>
+                <p>Опыт работы с 2016 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: UX/UI design, веб-дизайн, анимация, айдентика, продуктовый дизайн, полиграфия,
+                    дизайн-системы, продуктовая анадитика</p>
+                <p id="more"><a href="">Узнать больше</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div id="teacher5">
+            <div>
+                <img id="photo" src="img/ludmila.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Людмила Казакова</h3>
+                <p>Опыт работы с 2019 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: UX дизайн, UI архитектура, графический дизайн, моушн дизайн, маркетинг, бизнес
+                    аналитика</p>
+                <p id="more"><a href="">Узнать больше</a></p>
+            </div>
+        </div>
+        <div id="teacher6">
+            <div>
+                <img id="photo" src="img/andrey.png">
+            </div>
+            <div class="teacherDescription">
+                <h3>Андрей Клименок</h3>
+                <p>Опыт работы с 2019 года</p>
+                <p>Специальность:</p>
+                <p id="UI">UX/UI и веб-дизайн</p>
+                <p>Сфера интересов: UX/UI дизайн, графический дизайн, проектирование пользовательских интерфейсов,
+                    анимация</p>
+                <p id="more"><a href="">Узнать больше</a></p>
+            </div>
         </div>
     </div>
 
