--- a/maket2.html
+++ b/maket2.html
@@ -87,8 +87,8 @@
                 <p>лет опыта работы</p>
             </div>
         </div>
-        <div>
-            <img src="img/video_img.png">
+        <div id="video">
+            <img id="play-button" src="img/play_button.svg">
         </div>
     </div>
 
@@ -108,8 +108,12 @@
             </div>
         </div>
         <div>
-            <img src="img/classes.png">
+            <img src="img/girl 2.png">
         </div>
+    </div>
+    
+    <div class="button3">
+        <button id="button3"><a href="">Получить консультацию</a></button>
     </div>
 
     <div class="works">
@@ -137,9 +141,11 @@
     </div>
 
     <div class="button3">
-        <button id="button3">Получить консультацию</button>
+        <button id="button3"><a href="">Получить консультацию</a></button>
     </div>
-    <div>
+
+    
+    <div class="teachers">
         <h2>Преподаватели</h2>
     </div>
 
@@ -235,7 +241,7 @@
     </div>
 
 
-    <div>
+    <div class="work-programs">
         <h2>Программа трудоустройства</h2>
     </div>
 
@@ -271,12 +277,12 @@
     </div>
     </div>
 
-    <div>
+    <div class="partners">
         <h2>Куда трудоустраиваем / с кем сотрудничаем</h2>
     </div>
 
-    <div>
-        <img src="img/logos.png">
+    <div class="partners-logos">
+        <img id="logos" src="img/logos.png">
     </div>
 
 </body>
