--- a/maket2.html
+++ b/maket2.html
@@ -35,8 +35,8 @@
                 <p>Онлайн и оффлайн группы</p>
             </div>
             <div class="buttons">
-                <button class="button1">Получить консультацию</button>
-                <button class="button2">Программа курса</button>
+                <button class="button1"><a href="">Получить консультацию</a></button>
+                <button class="button2"><a href="">Программа курса</a></button>
             </div>
         </div>
         <div class="girlimg">
