--- a/maket2.html
+++ b/maket2.html
@@ -107,8 +107,8 @@
                 </p>
             </div>
         </div>
-        <div>
-            <img src="img/girl 2.png">
+        <div class="girl2-img">
+            <img id="girl2" src="img/girl 2.png">
         </div>
     </div>
     
