--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -10,12 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <img class="header" src="Images/images/Main page_header.png">
-    </header>
+    <header></header>
 
-
-    
     <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
         <div class="footerMenu">
